--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,7 +1,7 @@
 ---
-import '@fontsource/noto-sans-jp/500.css';
-import '@fontsource/noto-sans-jp/700.css';
-import '@fontsource/noto-sans-jp/900.css';
+import '@fontsource/ibm-plex-sans-jp/400.css'
+import '@fontsource/ibm-plex-sans-jp/500.css'
+import '@fontsource/ibm-plex-sans-jp/700.css'
 
 import ConfigCarrier from "@components/ConfigCarrier.astro";
 import { profileConfig, siteConfig } from "@/config";
