--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -4,6 +4,8 @@ import "@fontsource/ibm-plex-sans-jp/500.css";
 import "@fontsource/ibm-plex-sans-jp/700.css";
 
 import ConfigCarrier from "@components/ConfigCarrier.astro";
+import MusicPlayer from "@components/misc/MusicPlayer.astro";
+import Particles from "@components/misc/Particles.astro";
 import { profileConfig, siteConfig } from "@/config";
 import {
 	AUTO_MODE,
@@ -151,6 +153,8 @@ const bannerOffset =
 	<body class=" min-h-screen transition bg-[radial-gradient(oklch(0.75_0.12_var(--hue)_/_0.1)_1px,transparent_1px)] [background-size:20px_20px] [background-attachment:fixed]" class:list={[{"lg:is-home": isHomePage, "enable-banner": enableBanner}]}
 		  data-overlayscrollbars-initialize
 	>
+		<Particles />
+		<MusicPlayer />
 		<ConfigCarrier></ConfigCarrier>
 		<slot />
 
